SELECT element: Do not normalize |size| content attribute value.

We normalized |size| content attribute value to a number in order to write the
UA stylesheet easier. We introduced :-internal-list-box a few years ago, and
this normalization isn't necessary now.

This CL does:

- Do not normalize |size| attribute value in HTMLSelectElement::
  ParseAttribute().
- Use the standard reflection code for |size| IDL attribute.

Bug: 745316
Change-Id: Ifcd3b2b55762f49b72c49900ab89a4fe78fb9b78
Reviewed-on: https://chromium-review.googlesource.com/598763
Commit-Queue: Kent Tamura <tkent@chromium.org>
Reviewed-by: Keishi Hattori <keishi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#491933}
Former-commit-id: 8de8f952cde5da47147368a7ddca24053056e3a0