third_party/WebKit/Source/core/html/HTMLSelectElement.cpp
@@ -57,6 +57,7 @@
 #include "core/html/HTMLOptionElement.h"
 #include "core/html/forms/FormController.h"
 #include "core/html/forms/PopupMenu.h"
+#include "core/html/parser/HTMLParserIdioms.h"
 #include "core/input/EventHandler.h"
 #include "core/input/InputDeviceCapabilities.h"
 #include "core/inspector/ConsoleMessage.h"
@@ -294,18 +295,8 @@ void HTMLSelectElement::ParseAttribute(
     const AttributeModificationParams& params) {
   if (params.name == sizeAttr) {
     unsigned old_size = size_;
-    // Set the attribute value to a number.
-    // This is important since the style rules for this attribute can
-    // determine the appearance property.
-    unsigned size = params.new_value.GetString().ToUInt();
-    AtomicString attr_size = AtomicString::Number(size);
-    if (attr_size != params.new_value) {
-      // FIXME: This is horribly factored.
-      if (Attribute* size_attribute =
-              EnsureUniqueElementData().Attributes().Find(sizeAttr))
-        size_attribute->SetValue(attr_size);
-    }
-    size_ = size;
+    if (!ParseHTMLNonNegativeInteger(params.new_value, size_))
+      size_ = 0;
     SetNeedsValidityCheck();
     if (size_ != old_size) {
       if (InActiveDocument())
@@ -363,10 +354,6 @@ void HTMLSelectElement::AccessKeyAction(bool send_mouse_events) {
   focus();
   DispatchSimulatedClick(
       nullptr, send_mouse_events ? kSendMouseUpDownEvents : kSendNoEvents);
-}
-
-void HTMLSelectElement::setSize(unsigned size) {
-  SetUnsignedIntegralAttribute(sizeAttr, size);
 }
 
 Element* HTMLSelectElement::namedItem(const AtomicString& name) {
